2009-03-18  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* engines/clearlooks/src/clearlooks_draw.c (clearlooks_draw_entry):
	* engines/clearlooks/src/clearlooks_draw_gummy.c
	(clearlooks_gummy_draw_entry):
	* engines/clearlooks/src/clearlooks_style.c
	(clearlooks_style_draw_box):
	* themes/Clearlooks/gtk-2.0/gtkrc:
	Fixed the focus inner shadow in draw_entry.
	Fixed the focus_color in the gtkrc, needs to be backported in
	gnome-themes.

2009-03-16  Benjamin Berg  <benjamin@sipsolutions.net>

	* configure.ac:
	Post release version bump.

2009-03-16  Benjamin Berg  <benjamin@sipsolutions.net>

	* NEWS:
	* configure.ac:
	Update for 2.18.0.

2009-03-16  Benjamin Berg  <benjamin@sipsolutions.net>

	* test/torturetest.c:
	Also test the new "entry_progress" detail string.

2009-03-10  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* engines/clearlooks/src/clearlooks_draw.c
	(clearlooks_draw_entry_progress):
	* engines/clearlooks/src/clearlooks_style.c
	(clearlooks_style_draw_box):
	Coding style.

2009-03-10  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* engines/clearlooks/src/clearlooks_draw.c (clearlooks_draw_entry):
	* engines/clearlooks/src/clearlooks_draw_gummy.c
	(clearlooks_gummy_draw_entry):
	* engines/clearlooks/src/clearlooks_style.c
	(clearlooks_style_draw_shadow):
	* engines/clearlooks/src/clearlooks_types.h:
	* themes/Clearlooks/gtk-2.0/gtkrc:
	Fixed a regression in the focus color of the GtkEntry introduced with
	the entry_progress commits.

2009-03-08  Benjamin Berg  <benjamin@sipsolutions.net>

	* engines/clearlooks/src/clearlooks_draw.c:
	(clearlooks_draw_entry_progress):
	* themes/Clearlooks/gtk-2.0/gtkrc:
	Fix the radius of the clearlooks entry progress drawing and do the
	necessary changes in the theme.

2009-03-06  Benjamin Berg  <benjamin@sipsolutions.net>

	* engines/clearlooks/src/clearlooks_draw.c:
	(clearlooks_draw_entry_progress),
	(clearlooks_register_style_classic):
	* engines/clearlooks/src/clearlooks_style.c:
	(clearlooks_style_draw_box):