@@ -2456,6 +2456,18 @@ clearlooks_draw_focus (cairo_t *cr,
 }
 
 void
+clearlooks_set_mixed_color (cairo_t          *cr,
+                            const CairoColor *color1,
+                            const CairoColor *color2,
+                            gdouble mix_factor)
+{
+	CairoColor composite;
+
+	ge_mix_color (color1, color2, mix_factor, &composite);
+	ge_cairo_set_color (cr, &composite);
+}
+
+void
 clearlooks_register_style_classic (ClearlooksStyleFunctions *functions, ClearlooksStyleConstants *constants)
 {
 	g_assert (functions);
