@@ -66,18 +66,6 @@ clearlooks_draw_glossy_gradient (cairo_t         *cr,
 	cairo_pattern_destroy (pt);
 }
 
-static void
-clearlooks_set_mixed_color (cairo_t          *cr, 
-                            const CairoColor *color1, 
-                            const CairoColor *color2, 
-                            gdouble mix_factor)
-{
-	CairoColor composite;
-
-	ge_mix_color (color1, color2, mix_factor, &composite);
-	ge_cairo_set_color (cr, &composite);
-}
-
 /* This draw_inset implementation only differes in the shades values from the
  * default one. */
 static void
